<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>caret_analyze_cpp_impl</name>
  <version>0.4.24</version>
  <description>c++ implementation of caret_analyze</description>
  <maintainer email="yamasaki@isp.co.jp">ymski</maintainer>
  <maintainer email="uetsuki@isp.co.jp">isp-uetsuki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pybind11_vendor</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
