<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indicators_vendor</name>
  <version>0.0.1</version>
  <description>Wrapper around indicators, it provides a fixed CMake module and an ExternalProject build of it.</description>
  <maintainer email="hasegawa.isp@gmail.com">hsgwa</maintainer>
  <license>Apache License 2.0</license>    <!-- the contents of this package are Apache 2.0 -->
  <license>MIT</license>    <!-- indicators is MIT -->

  <url type="website">https://github.com/p-ranav/indicators</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
